# deep-learning-from-scratch

./: pyproject.toml
ch01/: and_gate.py  nand_gate.py  or_gate.py  xor_gate.py
ch03/: mnist_show.py  neuralnet_mnist.py  neuralnet_mnist_batch.py  relu.py  sig_step_compare.py  sigmoid.py  step_function.py
ch04/: gradient_1d.py  gradient_2d.py  gradient_method.py  gradient_simplenet.py  train_neuralnet.py  two_layer_net.py
ch05/: buy_apple.py  buy_apple_orange.py  gradient_check.py  layer_naive.py  train_neuralnet.py  two_later_net.py  two_layer_net.py
ch06/: batch_norm_test.py  hyperparameter_optimization.py  optimizer_compare_mnist.py  optimizer_compare_naive.py  overfit_dropout.py  overfit_wight_decay.py  weight_init_activation.py  weight_init_compare.py
ch07/: simple_convnet.py  train_convnet.py  visualize_filter.py
ch08/: deep_convnet.py  train_deepnet.py
dataset/: mnist.py
