[tool.poetry]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = ""
authors = ["schwalbe10 <schwalbe10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
